--- a/index.html
+++ b/index.html
@@ -622,3 +622,16 @@ function MyStats({ address, contract }: { address: string; contract: any }) {
     </div>
   );
 }
+{/* Footer credit */}
+<footer className="mt-10 text-center text-xs text-zinc-500">
+  Created by{" "}
+  <a
+    href="https://x.com/ega_2ez4crypto"
+    target="_blank"
+    rel="noopener noreferrer"
+    className="underline hover:text-amber-400"
+  >
+    @ega_2ez4crypto
+  </a>
+</footer>
+
