--- a/index.html
+++ b/index.html
@@ -606,6 +606,24 @@ function MyStats({ address, contract }: { address: string; contract: any }) {
 
   if (!stats) return <div className="text-sm text-zinc-400">Loading…</div>;
   return (
+    return (
+    <div className="min-h-screen w-full bg-[#0a0a0b] text-zinc-100">
+      <div className="mx-auto max-w-7xl px-4 py-6">
+        {/* Header, Network Notice, Tabs, Content — tetap sama */}
+        <main className="mt-6">
+          {/* Semua tab: submit, pending, approved, leaderboard, me — tetap sama */}
+        </main>
+
+        {/* Footer Kredit Creator */}
+        <footer className="mt-12 w-full border-t border-zinc-800 pt-4 text-center text-xs text-zinc-500">
+          Created by <a href="https://x.com/ega_2ez4crypto" target="_blank" className="underline hover:text-amber-400">ega_2ez4crypto</a>
+        </footer>
+      </div>
+
+      {/* Twitter embed script */}
+      <script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
+    </div>
+  );
     <div className="grid gap-4 sm:grid-cols-3">
       <div className="rounded-2xl border border-zinc-800 bg-zinc-950 p-4">
         <div className="text-xs text-zinc-400">Memes Submitted</div>
@@ -622,16 +640,5 @@ function MyStats({ address, contract }: { address: string; contract: any }) {
     </div>
   );
 }
-{/* Footer credit */}
-<footer className="mt-10 text-center text-xs text-zinc-500">
-  Created by{" "}
-  <a
-    href="https://x.com/ega_2ez4crypto"
-    target="_blank"
-    rel="noopener noreferrer"
-    className="underline hover:text-amber-400"
-  >
-    @ega_2ez4crypto
-  </a>
-</footer>
+
 
